--- a/parts/footer.html
+++ b/parts/footer.html
@@ -4,14 +4,6 @@
 <!-- /wp:paragraph -->
 
 <!-- wp:paragraph -->
-<p>Mentions Légales</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph -->
-<p>Mentions Légales</p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph -->
-<p>Mentions Légales</p>
+<p>Gestion des Cookies</p>
 <!-- /wp:paragraph --></div>
 <!-- /wp:group -->
