STYLE: enhance header and footer structure, add 404 page template, and implement French typographic spaces

--- a/parts/header.html
+++ b/parts/header.html
@@ -2,6 +2,14 @@
 <div class="wp-block-group serinity-header-container has-background" style="background-color:#ffffff00"><!-- wp:group {"metadata":{"name":"header-wrapper"},"className":"serinity-header-wrapper","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
 <div class="wp-block-group serinity-header-wrapper"><!-- wp:site-title {"className":"serinity-header-home is-style-custom-font-size","fontSize":"serinity-lg"} /-->
 
-<!-- wp:navigation {"overlayMenu":"never","className":"serinity-header-navigation-menu"} /--></div>
+<!-- wp:navigation {"ref":4,"overlayMenu":"never","className":"serinity-header-navigation-menu"} /-->
+
+<!-- wp:html -->
+<button class="serinity-hamburger-menu" aria-label="Toggle menu" aria-expanded="false">
+  <div class="serinity-hamburger-box">
+    <div class="serinity-hamburger-inner"></div>
+  </div>
+</button>
+<!-- /wp:html --></div>
 <!-- /wp:group --></div>
 <!-- /wp:group -->
