--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,9 +1,13 @@
-<!-- wp:group {"style":{"dimensions":{"minHeight":"0px"},"elements":{"link":{"color":{"text":"var:preset|color|nacre-claire"}}},"spacing":{"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small","left":"var:preset|spacing|small","right":"var:preset|spacing|small"},"blockGap":"var:preset|spacing|medium"}},"backgroundColor":"taupe-sombre","textColor":"nacre-claire","layout":{"type":"flex","flexWrap":"nowrap"}} -->
-<div class="wp-block-group has-nacre-claire-color has-taupe-sombre-background-color has-text-color has-background has-link-color" style="min-height:0px;padding-top:var(--wp--preset--spacing--small);padding-right:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small);padding-left:var(--wp--preset--spacing--small)"><!-- wp:paragraph -->
-<p>Mentions Légales</p>
+<!-- wp:group {"style":{"dimensions":{"minHeight":"4rem"},"elements":{"link":{"color":{"text":"var:preset|color|nacre-claire"}}},"spacing":{"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small","left":"var:preset|spacing|small","right":"var:preset|spacing|small"},"blockGap":"var:preset|spacing|medium"}},"backgroundColor":"taupe-sombre","textColor":"nacre-claire","layout":{"type":"flex","flexWrap":"wrap"}} -->
+<div class="wp-block-group has-nacre-claire-color has-taupe-sombre-background-color has-text-color has-background has-link-color" style="min-height:4rem;padding-top:var(--wp--preset--spacing--small);padding-right:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small);padding-left:var(--wp--preset--spacing--small)"><!-- wp:paragraph -->
+<p><a href="http://localhost:8080/mentions-legales/" data-type="page" data-id="199">Mentions Légales</a></p>
 <!-- /wp:paragraph -->
 
 <!-- wp:paragraph -->
-<p>Gestion des Cookies</p>
+<p><a href="http://localhost:8080/gestion-des-cookies/" data-type="page" data-id="200">Gestion des Cookies</a></p>
+<!-- /wp:paragraph -->
+
+<!-- wp:paragraph -->
+<p><a href="http://localhost:8080/politique-de-confidentialite/" data-type="page" data-id="590">Confidentialité</a></p>
 <!-- /wp:paragraph --></div>
 <!-- /wp:group -->
