REFINE: enhance link styles in paragraphs and update image URLs in 404 template

--- a/parts/header.html
+++ b/parts/header.html
@@ -1,15 +1,15 @@
 <!-- wp:group {"metadata":{"name":"header-container"},"className":"serinity-header-container","style":{"position":{"type":""},"spacing":{"blockGap":"0"},"color":{"background":"#ffffff00"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"center"}} -->
 <div class="wp-block-group serinity-header-container has-background" style="background-color:#ffffff00"><!-- wp:group {"metadata":{"name":"header-wrapper"},"className":"serinity-header-wrapper","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
-<div class="wp-block-group serinity-header-wrapper"><!-- wp:site-title {"className":"serinity-header-home is-style-custom-font-size","fontSize":"serinity-lg"} /-->
-
-<!-- wp:navigation {"ref":4,"overlayMenu":"never","className":"serinity-header-navigation-menu"} /-->
-
-<!-- wp:html -->
-<button class="serinity-hamburger-menu" aria-label="Toggle menu" aria-expanded="false">
-  <div class="serinity-hamburger-box">
-    <div class="serinity-hamburger-inner"></div>
-  </div>
-</button>
-<!-- /wp:html --></div>
-<!-- /wp:group --></div>
-<!-- /wp:group -->
+  <div class="wp-block-group serinity-header-wrapper"><!-- wp:site-title {"className":"serinity-header-home is-style-custom-font-size","fontSize":"serinity-lg"} /-->
+  
+  <!-- wp:navigation {"ref":4,"overlayMenu":"never","className":"serinity-header-navigation-menu ticss-7d25bbec","hasCustomCSS":true,"customCSS":".ticss-7d25bbec.serinity-header-navigation-menu {\n  gap: 1.2rem;\n}\n\n.ticss-7d25bbec.serinity-header-navigation-menu .serinity-header-link a {\n  font-size: 0.9rem;\n  letter-spacing: 1px;\n  font-weight: 500;\n}\n\n.ticss-7d25bbec.serinity-header-navigation-menu .serinity-header-link ul.serinity-header-link li a {\n  height:unset!important;\n  padding: .5rem .8rem;\n}"} /-->
+  
+  <!-- wp:html -->
+  <button class="serinity-hamburger-menu" aria-label="Toggle menu" aria-expanded="false">
+    <div class="serinity-hamburger-box">
+      <div class="serinity-hamburger-inner"></div>
+    </div>
+  </button>
+  <!-- /wp:html --></div>
+  <!-- /wp:group --></div>
+  <!-- /wp:group -->
