--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,13 +1,73 @@
-<!-- wp:group {"style":{"dimensions":{"minHeight":"4rem"},"elements":{"link":{"color":{"text":"var:preset|color|nacre-claire"}}},"spacing":{"padding":{"top":"var:preset|spacing|small","bottom":"var:preset|spacing|small","left":"var:preset|spacing|small","right":"var:preset|spacing|small"},"blockGap":"var:preset|spacing|medium"}},"backgroundColor":"taupe-sombre","textColor":"nacre-claire","layout":{"type":"flex","flexWrap":"wrap"}} -->
-<div class="wp-block-group has-nacre-claire-color has-taupe-sombre-background-color has-text-color has-background has-link-color" style="min-height:4rem;padding-top:var(--wp--preset--spacing--small);padding-right:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--small);padding-left:var(--wp--preset--spacing--small)"><!-- wp:paragraph -->
-<p><a href="http://localhost:8080/mentions-legales/" data-type="page" data-id="199">Mentions Légales</a></p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph -->
-<p><a href="http://localhost:8080/gestion-des-cookies/" data-type="page" data-id="200">Gestion des Cookies</a></p>
-<!-- /wp:paragraph -->
-
-<!-- wp:paragraph -->
-<p><a href="http://localhost:8080/politique-de-confidentialite/" data-type="page" data-id="590">Confidentialité</a></p>
-<!-- /wp:paragraph --></div>
-<!-- /wp:group -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|medium","bottom":"var:preset|spacing|medium","left":"var:preset|spacing|small","right":"var:preset|spacing|small"}}},"backgroundColor":"taupe","layout":{"type":"constrained","contentSize":"1280px"}} -->
+<div class="wp-block-group has-taupe-background-color has-background" style="padding-top:var(--wp--preset--spacing--medium);padding-right:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--medium);padding-left:var(--wp--preset--spacing--small)"><!-- wp:columns {"style":{"elements":{"link":{"color":{"text":"var:preset|color|nacre"},":hover":{"color":{"text":"var:preset|color|aubergine-claire"}}}},"spacing":{"blockGap":{"top":"var:preset|spacing|medium","left":"var:preset|spacing|medium"}}},"backgroundColor":"taupe","textColor":"nacre"} -->
+  <div class="wp-block-columns has-nacre-color has-taupe-background-color has-text-color has-background has-link-color"><!-- wp:column -->
+  <div class="wp-block-column"><!-- wp:separator -->
+  <hr class="wp-block-separator has-alpha-channel-opacity"/>
+  <!-- /wp:separator -->
+  
+  <!-- wp:paragraph {"className":"ticss-4e2e1138","hasCustomCSS":true,"customCSS":".ticss-4e2e1138 {\n  text-decoration: underline;\n}\n"} -->
+  <p class="ticss-4e2e1138"><a href="https://dev-cat-wp.marseaud.fr/mentions-legales/" data-type="page" data-id="199">Mentions légales</a></p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:paragraph {"className":"ticss-4e2e1138"} -->
+  <p class="ticss-4e2e1138"><a href="https://dev-cat-wp.marseaud.fr/gestion-des-cookies/" data-type="link" data-id="https://dev-cat-wp.marseaud.fr/gestion-des-cookies/">Gestion des cookies</a></p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:paragraph {"className":"ticss-4e2e1138"} -->
+  <p class="ticss-4e2e1138"><a href="https://dev-cat-wp.marseaud.fr/politique-de-confidentialite/" data-type="page" data-id="590">Confidentialité</a></p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:paragraph {"className":"ticss-4e2e1138"} -->
+  <p class="ticss-4e2e1138">CGV</p>
+  <!-- /wp:paragraph --></div>
+  <!-- /wp:column -->
+  
+  <!-- wp:column -->
+  <div class="wp-block-column"><!-- wp:separator -->
+  <hr class="wp-block-separator has-alpha-channel-opacity"/>
+  <!-- /wp:separator -->
+  
+  <!-- wp:paragraph {"className":"ticss-4e2e1138"} -->
+  <p class="ticss-4e2e1138"><a href="https://dev-cat-wp.marseaud.fr/questions-frequentes/" data-type="page" data-id="1193">Questions Fréquentes</a></p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:paragraph {"className":"ticss-4e2e1138"} -->
+  <p class="ticss-4e2e1138"><a href="https://dev-cat-wp.marseaud.fr/a-quoi-sattendre/" data-type="page" data-id="1169">À quoi s'attendre ?</a></p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:paragraph -->
+  <p>Ma boutique de créations artisanales</p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:paragraph {"className":"ticss-063d83b3","hasCustomCSS":true,"customCSS":".ticss-063d83b3 a {\n  font-weight: 600;\n  text-decoration: underline;\n}\n"} -->
+  <p class="ticss-063d83b3"><a href="https://www.fleur-et-papillon.fr/">fleur-et-papillon.fr  <span class="wp-block-themeisle-blocks-font-awesome-icons-container"><i class="fas fa-external-link-alt"></i></span></a></p>
+  <!-- /wp:paragraph --></div>
+  <!-- /wp:column -->
+  
+  <!-- wp:column -->
+  <div class="wp-block-column"><!-- wp:separator -->
+  <hr class="wp-block-separator has-alpha-channel-opacity"/>
+  <!-- /wp:separator -->
+  
+  <!-- wp:paragraph {"className":"ticss-4e2e1138"} -->
+  <p class="ticss-4e2e1138"><a href="https://dev-cat-wp.marseaud.fr/me-contacter/" data-type="page" data-id="113">Me contacter</a></p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:paragraph {"className":"ticss-4e2e1138"} -->
+  <p class="ticss-4e2e1138"><a href="https://dev-cat-wp.marseaud.fr/seance-decouverte/" data-type="page" data-id="163">Prendre rendez-vous</a></p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:paragraph -->
+  <p>Me suivre sur les réseaux</p>
+  <!-- /wp:paragraph -->
+  
+  <!-- wp:social-links {"iconColor":"nacre-claire","iconColorValue":"#faf8f6","iconBackgroundColor":"aubergine-sombre","iconBackgroundColorValue":"#7a6580","openInNewTab":true,"className":"is-style-pill-shape"} -->
+  <ul class="wp-block-social-links has-icon-color has-icon-background-color is-style-pill-shape"><!-- wp:social-link {"url":"https://www.facebook.com/catherinechauvin046","service":"facebook","label":""} /-->
+  
+  <!-- wp:social-link {"url":"https://www.instagram.com/catherinechauvin_hypnose/","service":"instagram"} /-->
+  
+  <!-- wp:social-link {"url":"https://www.linkedin.com/company/catherinechauvin/","service":"linkedin"} /--></ul>
+  <!-- /wp:social-links --></div>
+  <!-- /wp:column --></div>
+  <!-- /wp:columns --></div>
+  <!-- /wp:group -->
